Fix nav item spacing

--- a/resources/web/styles.css
+++ b/resources/web/styles.css
@@ -5,6 +5,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: aktiv-grotesk, sans-serif;
 }
 
+.navbar-nav:first-child li {
+  margin: 0;
+}
+
 #footer-wrapper {
     clear: both;
 }
